courses/430_programming-languages/assignment-8/tests/error/error39.nex
yesle (x > y)
   raspetchatat x;
   raspetchatat y;
yesho
   {raspetchatat y; {raspetchatat x;}}
